# cell-monitor-extension

./: .dockerignore  .env.backup.20250817_215811  .env.backup.20250817_221537  .env.development  .env.example.improved  .env.example.old  .env.old  .env.production  .gitignore  .pre-commit-config.yaml  2025-08-15-frontend-refactoring-plan.md  2025-08-16-dashboard-optimization-integration-plan.md  2025-08-16-fastapi-server-improvement-plan.md  2025-08-16-legacy-dashboard-deprecation-plan.md  2025-08-18-consecutive-error-detection-implementation.md  2025-08-18-dashboard-complete-beginner-guide.md  2025-08-21-cell-monitor-extension-analysis-and-improvements.md  2025-08-21-cell-monitor-large-scale-deployment-guide.md  2025-08-22-instructor-dashboard-comprehensive-optimization-guide.md  2025-08-22-recommended-improvements-implementation-guide.md  CLAUDE.md  INSTALL.md  README-環境切り替え.md  backendリファクタリング計画.md  build-extension-fast.sh  build-extension-quick.sh  build-extension.sh  docker-compose.test.yml  docker-compose.yml  form-data脆弱性修正計画.md  jupyterlab配布準備完了.md  package.json  plan.md  setup-extension.sh  test_extension_debug.ipynb  手動インストール手順.md
cell-monitor-extension/: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.build  Dockerfile.build-fast  Dockerfile.simple  JupyterLab拡張機能のプログラム構成.md  LICENSE  Phase-2.3-Manual-Test-Guide.md  README.md  README_JP.md  UI_UX改善メモリ影響評価.md  audit-before.json  build-entrypoint.sh  docs_rebuild.md  inject_env_vars.py  install.json  jest.config.js  jupyter_server_config.py  macos-env.sh  package-lock.json  package-lock.json.backup  package.json  pyproject.toml  requirements.txt  test-phase2-integration.md  test_memory_improvement.py  tsconfig.json  tsconfig.tsbuildinfo  プログラム最適化分析レポート.md  メモリリーク対策_現状確認.md  初心者向け_最適化項目説明.md
cell-monitor-extension/.serena/: project.yml
cell-monitor-extension/.serena/memories/: project_overview.md
cell-monitor-extension/TEST/: Untitled.ipynb  memory_test_notebook.ipynb  teach.ipynb
cell-monitor-extension/cell_monitor/: __init__.py  handlers.py
cell-monitor-extension/cell_monitor/labextension/: build_log.json  package.json
cell-monitor-extension/docs/: AI_DEVELOPMENT_CONTEXT.md  CODE_ISSUES_AND_FIXES.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  DOCUMENTATION_INDEX.md  EXTENSION_EVALUATION_REPORT.md  EXTENSION_OVERVIEW.md  FINAL_DOCUMENTATION_AUDIT_REPORT.md  IMPLEMENTATION_CONSISTENCY_VERIFICATION_REPORT.md  OPERATIONS_GUIDE.md  QUICK_REFERENCE.md  README.md  TECHNICAL_ASSESSMENT.md
cell-monitor-extension/docs/analysis/: FEATURE_SECURITY_ANALYSIS.md  INTEGRATION_EVALUATION.md  QUALITY_ASSESSMENT.md
cell-monitor-extension/docs/api/: API_FUNCTIONS.md  CORE_CLASSES_API.md  README.md  (+2 more)
cell-monitor-extension/lib/: index.d.ts  index.js
cell-monitor-extension/schema/: plugin.json
cell-monitor-extension/scripts/: test-phase2-automated.js
cell-monitor-extension/src/: index.ts  intl.d.ts
cell-monitor-extension/style/: index.css
cell-monitor-extension/tests/: DataTransmissionService.test.ts  EventManager.test.ts  help-button.test.ts  help-request.test.ts  jest.d.ts  load-distribution.test.ts  notification-control.test.ts  settings.test.ts  setup.ts  tsconfig.json  types.test.ts
(+516 files in other folders)
